<resources>
    <string name="app_name">AdaptiveLearning</string>
    <string name="password_text_abel">Password</string>
    <string name="login_button_label">Login</string>
    <string name="email_text_label">Email Or Username</string>
    <string name="not_registered_text">Not registered?</string>
    <string name="register_now_text">Register Now</string>
    <string name="login_activity_label">Login</string>
    <string name="login_successful_message">Login successful</string>
    <string name="main_activity_label">Home</string>
    <string name="date_of_birth">%d-%s-%s</string>
    <string name="register_activity_label">Register</string>
    <string name="enroll_button_label">ENROLL</string>
    <string name="quiz_time_in_minutes">%d Minutes</string>
    <string name="quiz_total_marks">Total mark: %d</string>

    <string-array name="grade">
        <item>Choose school grade</item>
        <item>Pre-K/Kindergarten</item>
        <item>1st grade</item>
        <item>2nd grade</item>
        <item>3rd grade</item>
        <item>4th grade</item>
        <item>5th grade</item>
        <item>6th grade</item>
        <item>7th grade</item>
        <item>8th grade</item>
        <item>High school and beyond</item>
        <item>Other/Not applicable</item>
    </string-array>

    <string-array name="gender">
        <item>Choose child gender</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>

</resources>
